# ChargeMyTesla

./: CLAUDE.md  CMakeLists.txt  README.md  build.sh  power_status_table  power_status_table.cpp  quick_test.cpp  solar_plan.md  test_simple.cpp
include/: data_converter.hpp  inverter_config.hpp  sungrow_client.hpp  sungrow_crypto.hpp  sungrow_inverter.hpp
src/: data_converter.cpp  energy_data_reader.cpp  exact_scanner_test.cpp  main.cpp  quick_test.cpp  raw_data_extractor.cpp  register_scanner.cpp  simple_register_test.cpp  sungrow_client.cpp  sungrow_crypto.cpp  sungrow_inverter.cpp
